syntax = "proto2";  // 或者 "proto2" 根据需求选择

////////////////////////////////////////////////////////////////
//               XICABehaviorDeciderConfig              //
////////////////////////////////////////////////////////////////
message XICABehaviorDeciderConfig {
  optional int32 mcts_max_search_iter = 1 [ default = 5000 ];
  optional double mcts_max_search_time = 2 [ default = 10.0 ];
  optional int32 mcts_node_pool_size = 3 [ default = 10000 ];
  optional int32 TimeVariantBicycleAccDynamicsConfig = 4 [default = 0];
  optional double veh_max_acc = 5 [ default = 10.0 ];
  optional double veh_min_acc = 6 [ default = -2.0 ];
  optional double veh_ego_length = 7 [ default = 5.0 ];
  optional double veh_ego_width = 8 [ default = 2.0 ];
  optional double gamma = 9 [ default = 0.8 ];
  optional double c = 10 [ default = 1.41 ];
  optional int32 min_valid_node_num = 11 [ default = 300 ];
  optional double vru_max_vel = 12 [default = 6.0];
  optional double left_turn_range = 13 [ default = 15.0 ];
  optional double heading_range = 14 [ default = 0.17 ];
  optional double lk_lat_range = 15 [ default = 8.0 ];
  optional double lat_expand_factor = 16 [ default = 1.4 ];
  optional double long_expand_factor = 17 [ default = 1.6 ];
  optional double invalid_penalty = 18 [ default = -0.5 ];
  optional double vel_limit_factor = 19 [ default = 1.1 ];
  optional double max_delta_l = 20 [ default = 2.5 ];
  optional double min_decision_distance = 21 [ default = 15.0 ];
  repeated double coarse_time_step = 30;
  repeated double fine_time_step = 31;
  repeated double jerk_action = 32;
  repeated double lk_dkappa_action = 33;
  repeated double right_dkappa_action = 34;
  repeated double left_dkappa_action = 35;
  optional bool is_opposite_collision_func_open = 40 [ default = true ];
  optional bool is_opposite_left_turn_func_open = 41 [ default = true ];
  optional bool is_debug_info_open = 42 [ default = false ];
  optional double w_acc = 100 [ default = 0.2 ];
  optional double w_eff = 101 [ default = 0.2 ];
  optional double w_ref = 102 [ default = 0.6 ];
  optional double w_safe = 103 [ default = 0.5 ];
  optional double w_pred = 104 [ default = 0.6 ];
  optional double w_cons_act = 105 [ default = 0.6 ];
  optional double w_cons_his = 106 [ default = 0.4 ];
  optional bool use_x_ica_behavior_decider = 150 [ default = true ];
  optional bool use_neighbor_back_obs = 151 [default = false];
  optional double lookhead_distance = 152 [default = 60.0];
  optional bool use_virtual_obs = 153 [default = false];
  optional int32 nudge_obstacles_num = 154 [default = 5];
  optional int32 curr_lane_obstacles_num = 155 [default = 3];
  optional bool always_use_neighbor_obs = 156 [default = false];
  optional int32 left_obstacles_num = 157 [default = 3];
  optional int32 right_obstacles_num = 158 [default = 3];
  optional bool is_tree_pre_constructed = 159 [default = false];
  optional double ego_agent_reward_adjust = 160 [default = 1.0];
  optional double xica_w_eff = 161 [default = 0.3];
  optional double xica_w_acc = 162 [default = 0.1];
  optional double xica_w_safe = 163 [default = 1.0];
  optional double xica_w_occ = 164 [default = 0.5];
  optional double max_acc_ = 165 [default = 1.3];
  optional double comfort_acc_ = 166 [default = 0.5];
  optional double acc_exp_ = 167 [default = 2.0];
  optional double idm_min_dist_ = 168 [default = 2.5];
  optional double idm_desired_time_ = 169 [default = 0.9];
  optional double idmepsilon = 170 [default = 1e-5];
  optional bool use_ref_pre_construct = 171 [default = true];
  optional bool xica_need_preconstruct = 172 [default = true];
  optional bool xica_need_ego_idm = 173 [default = true];
  optional double occ_bound_max = 174 [default = -1.0];
  optional double xica_w_cons_his = 175 [default = 0.5];
  optional double min_decision_delta_t = 176 [default = 0.5];
  optional double xica_diff_dis_max = 177 [default = 5.0];
  optional double xica_diff_v_max = 178 [default = 3.0];
  optional double xica_diff_a_max = 179 [default = 2.0]; 
  optional double rel_lat_thresh = 180 [default = 1.0];
  optional double xica_w_refline = 181 [default = 1.0];

  // optional double xica_max_d_theta = 182 [default = 0.8];

}